# kcli

./: Cargo.toml
src/: get_test.rs  main.rs  tui.rs
src/cli/: completions.rs  mod.rs
src/cli/acl/: mod.rs
src/cli/config/: mod.rs  profile.rs  registry.rs
src/cli/config/cluster/: add.rs  alter.rs  create.rs  default.rs  describe.rs  list.rs  mod.rs  remove.rs  set.rs  util.rs
src/cli/config/profile/: add.rs  alter.rs  describe.rs  import.rs  list.rs  mod.rs  remove.rs
src/cli/config/topic/: add.rs  alter.rs  describe.rs  import.rs  list.rs  mod.rs  remove.rs
src/cli/consumer/: mod.rs  util.rs
src/cli/group/: mod.rs
src/cli/producer/: mod.rs
src/cli/topic/: alter.rs  create.rs  delete.rs  describe.rs  list.rs  mod.rs
src/cli/util/: mod.rs
src/config/: clusters.rs  mod.rs
src/config/clusters/: mod.rs
src/config/clusters/auth/: mod.rs  sasl_plain.rs  sasl_ssl.rs
src/config/profiles/: group.rs  mod.rs  reset.rs
src/config/topics/: group.rs  mod.rs
src/error/: mod.rs
src/error/cli/: mod.rs
src/error/cli/config/: cluster.rs  mod.rs  profile.rs  topic.rs
src/error/cli/consume/: mod.rs
src/error/cli/util/: mod.rs
src/error/config/: clusters.rs  mod.rs
src/error/io/: mod.rs
src/io/: mod.rs  output.rs
src/io/input/: mod.rs
src/io/serde/: mod.rs
src/util/: mod.rs
