[package]
name = "kcli"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.13", features = ["derive"] }
clap_complete = "4.5.33"
dirs = "5.0.1"
error-stack = { version = "0.5.0", features = ["anyhow"] }
inquire = { version = "0.7.5", features = ["editor"] }
log = "0.4.22"
ratatui = "0.28.1"
rdkafka = { version = "0.36.2", features = ["libz"], default-features = false}
regex = "1.11.0"
ron = "0.8.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yml = "0.0.12"
simplelog = "0.12.2"
thiserror = "1.0.64"
toml = "0.8.19"
uuid = { version = "1.10.0", features = ["v4"] }
